--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@nguniversal/common": "^5.0.0-beta.5",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "@types/node": "^7.0.12",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
@@ -71,7 +70,10 @@
     "@angular/compiler-cli": "^5.2.1",
     "@ngtools/webpack": "^1.9.0",
     "@types/chai": "^3.4.34",
+    "@types/extract-text-webpack-plugin": "^3.0.1",
     "@types/jasmine": "^2.5.37",
+    "@types/node": "^7.0.55",
+    "@types/webpack": "^3.8.7",
     "chai": "^3.5.0",
     "codelyzer": "^3.0.0",
     "istanbul-instrumenter-loader": "^3.0.0",
